# syllable

./: Cargo.toml  README.md
resource/: LICENSE-data  data.csv
src/: data.rs  lib.rs
