[package]
name = "syllable"
version = "0.1.0"
authors = ["J/A <archer884@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/archer884/syllable"
keywords = ["english", "flesch-kincaid", "readability", "syllable", "word-count"]
categories = ["text-processing"]
description = """
A syllable counter for use with reading level calculations.
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
